--- a/PenjatFirebase2/app/src/main/res/values/strings.xml
+++ b/PenjatFirebase2/app/src/main/res/values/strings.xml
@@ -1,3 +1,16 @@
 <resources>
     <string name="app_name">PenjatFirebase2</string>
+    <string name="benvingut">Benvingut al Penjat</string>
+    <string name="usuari">Usuari</string>
+    <string name="clau">Clau</string>
+    <string name="login">Login</string>
+    <string name="registre">Registre</string>
+    <string name="tanca">Tancar Sessió</string>
+    <string name="PartidaN">Partida Nova</string>
+    <string name="PartidaA">Partida Antiga</string>
+    <string name="intents"><b>Intents:</b></string>
+    <string name="acerts"><b>Acerts:</b></string>
+    <string name="paraules"><b>Paraula</b></string>
+    <string name="lletra"><b>Escriu una lletra</b></string>
+    <string name="enviar">Enviar</string>
 </resources>
