mob - inserció duna partida

--- a/PenjatFirebase2/app/src/main/res/values/strings.xml
+++ b/PenjatFirebase2/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="paraules"><b>Paraula</b></string>
     <string name="lletra"><b>Escriu una lletra</b></string>
     <string name="enviar">Enviar</string>
+    <string name="nom_partida">Nom partida</string>
 </resources>
