mob - Penjat amb noves funcionalitats

--- a/PenjatFirebase2/app/src/main/res/values/strings.xml
+++ b/PenjatFirebase2/app/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@
     <string name="compartir">Compartir</string>
     <string name="veure_ranking">Veure ranking</string>
     <string name="ranking_penjat">Ranking Penjat</string>
+    <string name="has_perdut">Has perdut</string>
 </resources>
